Fix z-index of card-search-results
This prevents the premium wrapper icon and tooltip icon from overlapping
the search result popup.

--- a/hsreplaynet/static/styles/controls.scss
+++ b/hsreplaynet/static/styles/controls.scss
@@ -138,7 +138,7 @@ label>input {
 		padding: 5px;
 		position: absolute;
 		width: 100%;
-		z-index: 10;
+		z-index: 1000;
 
 		>ul {
 			list-style-type: none;
